# phishing-url-detector

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
fixtures/: build_parity_fixture.py  parity_urls.json
ml/: export_js.py  train.py
models/: model_meta.json  phishing_model.joblib
phishdetect/: __init__.py  classify.py  cli.py  features.py  heuristics.py  model.py  suffix_list.py  urlparse.py  whois_enrich.py
tests/: test_classify.py  test_cli.py  test_features.py  test_heuristics.py  test_model.py  test_parity.py
web/: index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  tsconfig.test.json  vite.config.ts
web/e2e/: app.spec.ts  screenshot.mjs
web/src/: features.test.ts  features.ts  fixtures.ts  heuristics.test.ts  heuristics.ts  main.ts  predict.test.ts  predict.ts  suffixList.ts  ui.ts  urlparse.ts
web/src/styles/: app.css  theme.css
